WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16642
[GTK] webkit_web_view_has_selection returns the opposite result
https://bugs.webkit.org/show_bug.cgi?id=16642
Summary
[GTK] webkit_web_view_has_selection returns the opposite result
Christian Dywan
Reported
2007-12-28 02:43:12 PST
The function webkit_web_view_has_selection returns the exact opposite of the expected result.
Attachments
Invert the return value.
(1.11 KB, patch)
2007-12-28 02:45 PST
,
Christian Dywan
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christian Dywan
Comment 1
2007-12-28 02:45:06 PST
Created
attachment 18144
[details]
Invert the return value.
Alp Toker
Comment 2
2007-12-28 18:34:16 PST
Comment on
attachment 18144
[details]
Invert the return value. r=me
Alp Toker
Comment 3
2007-12-28 18:49:07 PST
Landed in
r29013
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug