2007-12-28  Christian Dywan  <christian@twotoasts.de>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16642
        [GTK] webkit_web_view_has_selection returns the opposite result

        Invert the return value.

        * WebView/webkitwebview.cpp:


Canonical link: https://commits.webkit.org/22852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29013 268f45cc-cd09-0410-ab3c-d52691b4dbfc